optimisided DB lookup, added more Fairy Functions and views

--- a/templates/montage.html
+++ b/templates/montage.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-Below are 6 random fairies from the Kingdom <br>
-<img src="data:image/png;base64,{{contents}}"/>
 <div>
 	<a href="home" class="btn btn-primary btn-lg active" role="button">Main Page</a>
 	<a href="db" class="btn btn-primary btn-lg active" role="button">DB List</a>
+    <a href="montage20" class="btn btn-primary btn-lg active" role="button">Montage 20 random</a>
+    <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 100</a>
 	</div>
+Below are 6 random fairies from the Kingdom <br>
+<img src="data:image/png;base64,{{ contents }}"/>
+
 </body>
 </html>
