--- a/templates/dblist2.html
+++ b/templates/dblist2.html
@@ -11,18 +11,23 @@
     <a href="montage20" class="btn btn-primary btn-lg active" role="button">Montage 20 random</a>
     <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 100</a>
 </div>
+<div>
+    New Fairy Created <br>
+    <img src="data:image/png;base64,{{ contents }}"/>
+</div>
 Boy Faires = {{ bfairies }} <br>
 Girl Faires = {{ gfairies }}<br>
 Total Faires = {{ tfairies }}<br>
 Fairy Reference Detail = <br>
 {{ fairyref }}
-	<div>
-        <a href="deletedbtbl" class="btn btn-primary btn-lg active" role="button">Drop Fairy Table</a>
-        <a href="createdbtbl" class="btn btn-primary btn-lg active" role="button">Create Empty Fairy Table</a>
-        <a href="resetdb" class="btn btn-primary btn-lg active" role="button">reset existing with 100 random</a>
-        <a href="addgfairy" class="btn btn-primary btn-lg active" role="button">create new Girl Fairy</a>
-        <a href="addbfairy" class="btn btn-primary btn-lg active" role="button">create new Boy Fairy</a>
-    </div>
+<div>
+    <a href="deletedbtbl" class="btn btn-primary btn-lg active" role="button">Drop Fairy Table</a>
+    <a href="createdbtbl" class="btn btn-primary btn-lg active" role="button">Create Empty Fairy Table</a>
+    <a href="resetdb" class="btn btn-primary btn-lg active" role="button">reset existing with 100 random</a>
+    <a href="addgfairy" class="btn btn-primary btn-lg active" role="button">create new Girl Fairy</a>
+    <a href="addbfairy" class="btn btn-primary btn-lg active" role="button">create new Boy Fairy</a>
+
+</div>
 
 
 </body>
