--- a/templates/main.html
+++ b/templates/main.html
@@ -6,12 +6,18 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
+<div>
+    <a href="db" class="btn btn-primary btn-lg active" role="button">DB List</a>
+    <a href="montage20" class="btn btn-primary btn-lg active" role="button">Montage 20 random</a>
+    <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 100</a>
+</div>
 Welcome to the Fairy Kingdom <br>
 <img src="data:image/png;base64,{{contents}}"/>
-
 	<div>
-	<a href="db" class="btn btn-primary btn-lg active" role="button">DB List</a>
-	<a href="montage" class="btn btn-primary btn-lg active" role="button">Montage</a>
+        <a href="home" class="btn btn-primary btn-lg active" role="button">New Random Fairy from World </a>
+        <a href="fcard" class="btn btn-primary btn-lg active" role="button">New Random Fairy with Charactoristics</a>
+        <a href="fdetailcard" class="btn btn-primary btn-lg active" role="button">New Random Fairy with detail info</a>
 	</div>
+
 </body>
 </html>
