Reformated display of Fairy views, to remove whitespace at bottom

--- a/templates/montage12.html
+++ b/templates/montage12.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <div>
-	<a href="home" class="btn btn-primary btn-lg active" role="button">Main Page</a>
-	<a href="db" class="btn btn-primary btn-lg active" role="button">DB List</a>
+    <a href="home" class="btn btn-primary btn-lg active" role="button">Main Page</a>
+    <a href="db" class="btn btn-primary btn-lg active" role="button">DB List</a>
     <a href="montage20" class="btn btn-primary btn-lg active" role="button">Montage 8 random</a>
     <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 12</a>
-	</div>
-Below are 8 random fairies from the Kingdom <br>
+</div>
+Below are the first 12 fairies from the Kingdom <br>
 <img src="data:image/png;base64,{{ contents }}"/>
 
 </body>
