--- a/templates/dblist2.html
+++ b/templates/dblist2.html
@@ -8,8 +8,8 @@
 <body>
 <div>
     <a href="home" class="btn btn-primary btn-lg active" role="button">Main Page</a>
-    <a href="montage20" class="btn btn-primary btn-lg active" role="button">Montage 20 random</a>
-    <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 100</a>
+    <a href="montage20" class="btn btn-primary btn-lg active" role="button">Montage 8 random</a>
+    <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 12</a>
 </div>
 <div>
     New Fairy Created <br>
@@ -26,6 +26,7 @@ Fairy Reference Detail = <br>
     <a href="resetdb" class="btn btn-primary btn-lg active" role="button">reset existing with 100 random</a>
     <a href="addgfairy" class="btn btn-primary btn-lg active" role="button">create new Girl Fairy</a>
     <a href="addbfairy" class="btn btn-primary btn-lg active" role="button">create new Boy Fairy</a>
+    <a href="10newfairy" class="btn btn-primary btn-lg active" role="button">create 10 random Fairies</a>
 
 </div>
 
