IMplemented login on DB actions

--- a/templates/start.html
+++ b/templates/start.html
@@ -462,7 +462,7 @@ b.s=function(){var a=this.getAttribute("exit-override-url");a&&!d("tapareaexit",
         };
         gwd.auto_Page1Event_2 = function(event) {
           // GWD Predefined Function
-           window.location.href = "http://www.myfairykingdom.com/welcome"
+           window.location.href = "welcome"
         };
       </script>
       <script type="text/javascript" gwd-events="registration">
