--- a/templates/start.html
+++ b/templates/start.html
@@ -1691,7 +1691,8 @@ b.s=function(){var a=this.getAttribute("exit-override-url");a&&!d("tapareaexit",
         <div class="gwd-animation-event event-2-animation" data-event-name="event-2" data-event-time="6000"></div>
       </div>
     </div>
-    <div is="gwd-page" id="page1_1" class="gwd-page-wrapper page1-content gwd-lightbox gwd-div-ris9" data-gwd-width="100%" data-gwd-height="100%">
+    <div is="gwd-page" id="page1_1" class="gwd-page-wrapper page1-con
+    tent gwd-lightbox gwd-div-ris9" data-gwd-width="100%" data-gwd-height="100%">
       <div class="gwd-page-content page1-content gwd-div-qpd1"></div>
     </div>
   </div>
