working Authentication mechanism

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 
-Welcome to the Fairy Kingdom <br>
-<img src="data:image/png;base64,{{contents}}"/>
+<img src="data:image/png;base64,{{contents}}"height="600"/>
+      <p>Hello, my name is Princess {{Princess_name}}, welcome to the Fairy Kingdom</p>
+    <br>
 	<div>
         <a href="home" class="btn btn-primary btn-lg active" role="button">Expore </a>
         <a href="login" class="btn btn-primary btn-lg active" role="button">Login</a>
