--- a/templates/main.html
+++ b/templates/main.html
@@ -34,6 +34,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <a href="montage8" class="btn btn-primary btn-lg active" role="button">Montage 8 random</a>
     <a href="montage12" class="btn btn-primary btn-lg active" role="button">Montage 1st 12</a>
     <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 48</a>
+    <a href="{{ url_for('admin.index') }}">Go to admin!</a>
     {% if auth %}
     <a href="logout" class="btn btn-primary btn-lg active" role="button">LOGOUT</a>
     {% endif %}
