--- a/templates/security/change_password.html
+++ b/templates/security/change_password.html
@@ -1,11 +1,19 @@
+{% extends 'admin/master.html' %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
-<h1>Change password</h1>
-<form action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
-  {{ change_password_form.hidden_tag() }}
-  {{ render_field_with_errors(change_password_form.password) }}
-  {{ render_field_with_errors(change_password_form.new_password) }}
-  {{ render_field_with_errors(change_password_form.new_password_confirm) }}
-  {{ render_field(change_password_form.submit) }}
-</form>
+{% block body %}
+{{ super() }}
+<div class="row-fluid">
+    <div class="col-sm-8 col-sm-offset-2">
+        <h1>Change password</h1>
+        <form action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
+          {{ change_password_form.hidden_tag() }}
+          {{ render_field_with_errors(change_password_form.password) }}
+          {{ render_field_with_errors(change_password_form.new_password) }}
+          {{ render_field_with_errors(change_password_form.new_password_confirm) }}
+          {{ render_field(change_password_form.submit) }}
+        </form>
+        </div>
+    </div>
 
+{% endblock body %}
