--- a/templates/security/forgot_password.html
+++ b/templates/security/forgot_password.html
@@ -1,3 +1,4 @@
+{% extends 'admin/master.html' %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
 <h1>Send password reset instructions</h1>
