--- a/templates/security/reset_password.html
+++ b/templates/security/reset_password.html
@@ -1,10 +1,18 @@
+{% extends 'admin/master.html' %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
-<h1>Reset password</h1>
-<form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
-  {{ reset_password_form.hidden_tag() }}
-  {{ render_field_with_errors(reset_password_form.password) }}
-  {{ render_field_with_errors(reset_password_form.password_confirm) }}
-  {{ render_field(reset_password_form.submit) }}
-</form>
-{% include "security/_menu.html" %}
+{% block body %}
+{{ super() }}
+<div class="row-fluid">
+    <div class="col-sm-8 col-sm-offset-2">
+        <h1>Reset password</h1>
+        <form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
+          {{ reset_password_form.hidden_tag() }}
+          {{ render_field_with_errors(reset_password_form.password) }}
+          {{ render_field_with_errors(reset_password_form.password_confirm) }}
+          {{ render_field(reset_password_form.submit) }}
+        </form>
+    </div>
+</div>
+
+{% endblock body %}
