--- a/templates/main.html
+++ b/templates/main.html
@@ -30,6 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div>
     {% if admin %}
     <a href="db" class="btn btn-primary btn-lg active" role="button">DB List</a>
+    <a href="pdfcard" class="btn btn-primary btn-lg active" role="button">carddeck</a>
     {% endif %}
     <a href="montage8" class="btn btn-primary btn-lg active" role="button">Montage 8 random</a>
     <a href="montage12" class="btn btn-primary btn-lg active" role="button">Montage 1st 12</a>
