--- a/templates/main.html
+++ b/templates/main.html
@@ -30,12 +30,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div>
     {% if admin %}
     <a href="db" class="btn btn-primary btn-lg active" role="button">DB List</a>
-    <a href="pdfcard" class="btn btn-primary btn-lg active" role="button">carddeck</a>
+    <a href="pdfcard" class="btn btn-primary btn-lg active" role="button">standard carddeck</a>
+{#    <a href="randompdfcard" class="btn btn-primary btn-lg active" role="button">random carddeck</a>#}
     {% endif %}
     <a href="montage8" class="btn btn-primary btn-lg active" role="button">Montage 8 random</a>
     <a href="montage12" class="btn btn-primary btn-lg active" role="button">Montage 1st 12</a>
     <a href="montage100" class="btn btn-primary btn-lg active" role="button">Montage 1st 48</a>
-    <a href="{{ url_for('admin.index') }}">Go to admin!</a>
+    <a href="{{ url_for('admin.index') }}"class="btn btn-primary btn-lg active" role="button">Go to admin!</a>
     {% if auth %}
     <a href="logout" class="btn btn-primary btn-lg active" role="button">LOGOUT</a>
     {% endif %}
